--- a/FitnessTracker/pom.xml
+++ b/FitnessTracker/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>domovonok</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>FitnessTracker</name>
-  
+
   <parent>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-parent</artifactId>
@@ -34,17 +34,28 @@
         <artifactId>telegrambots-spring-boot-starter</artifactId>
         <version>${telegrambot.starter.version}</version>
     </dependency>
-    
+
+      <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>42.7.3</version>
+      </dependency>
+
     <dependency>
 		<groupId>org.hibernate.orm</groupId>
 		<artifactId>hibernate-core</artifactId>
 		<version>${hibernate.core.version}</version>
 	</dependency>
-	
-	  <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>provided</scope>
-        </dependency>
+
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-jdbc</artifactId>
+      </dependency>
   </dependencies>
 </project>
