--- a/FitnessTracker/src/main/resources/log4j.properties
+++ b/FitnessTracker/src/main/resources/log4j.properties
@@ -14,3 +14,7 @@ log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+spring.datasource.platform=postgres
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:db.sql
