--- a/FitnessTracker/pom.xml
+++ b/FitnessTracker/pom.xml
@@ -22,7 +22,7 @@
 		  <groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-web</artifactId>
 	  </dependency>
-	  
+
 	  <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
@@ -50,6 +50,7 @@
       <dependency>
           <groupId>org.projectlombok</groupId>
           <artifactId>lombok</artifactId>
+          <version>1.18.32</version>
           <scope>provided</scope>
       </dependency>
 
