- Добавлена возможность создавать упражнения, но нет пока возможности их просмотреть
- Изменены пара моментов в угоду читабельности

--- a/FitnessTracker/src/main/resources/application.properties
+++ b/FitnessTracker/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 8084
 
-bot.name=FitTrackDomovonokBot
-bot.token=7033585733:AAGXgDOBCO3R9lz2XX1HVVGOWR_hcfThNds
-
+bot.name=FitTrack_PavelIndev_bot
+bot.url=https://t.me/FitTrack_PavelIndev_bot
+bot.token=7161089650:AAGXFNIAoPoVowiuDJ_kTJunC_HsA5ZCTaY
 spring.datasource.url=jdbc:postgresql://localhost:5432/template1
 spring.datasource.username=postgres
 spring.datasource.password=1111
